project/base/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  strategy:
      type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: project-image-claim
      containers:
        - name: todo-app
          image: todo-app-image
          volumeMounts:
          - name: shared-image
            mountPath: /mydir/shared/files
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8000
            
          #resources:
          #  requests:
          #    cpu: "50m"
          #    memory: "64Mi"
          #  limits:
          #    cpu: "150m"
          #    memory: "128Mi"
