project/base/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: project-postgres-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: project-postgres
  ports:
    - port: 5432
      targetPort: 5432
